[package]
name = "small_ml"
version = "0.1.0"
authors = ["Mfanakagama mfanakagama@gmail.com github.com/hexaredecimal"]
edition = "2021"

[lib]
name = "smll_lang"
path = "src/lib.rs"

[[bin]]
name = "smll"
path = "src/bin.rs"

[dependencies]
nom = "6.1.2"
err-derive = "0.3.0"
codegen = "0.1.3"
rust-embed = "8.3.0"
tsu = "1.0.1"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"

