[package]
name = "small_ml"
version = "0.7.4"
authors = ["Gama Sibusiso Vincent"]
edition = "2021"

[lib]
name = "smll_lang"
path = "src/lib.rs"

[[bin]]
name = "smll"
path = "src/bin.rs"

[dependencies]
nom = "6.1.2"
err-derive = "0.3.0"
rust-embed = "8.3.0"
tsu = "1.0.1"
git2 = "0.18.3"
termcolor = "1.4.1"
tokio = "1.39.1"
traxex = "0.1.1"
pkg_compile_time = "0.1.3"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

